--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -19,7 +19,7 @@
         android:id="@+id/phone_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="288dp"
         android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
@@ -49,7 +49,7 @@
         android:id="@+id/name_edit_text2"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="204dp"
         android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
@@ -112,7 +112,7 @@
         android:id="@+id/id_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="116dp"
         android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
@@ -130,15 +130,17 @@
         android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/round_white_rect"
         android:fontFamily="@font/rubik_bold"
         android:text="비번찾기"
         android:textColor="#A6A4E8"
         android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteY="526dp" />
+        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text"
+        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
