--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -11,7 +11,7 @@
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
     <fragment
-        android:id="@+id/chatFragment2"
+        android:id="@+id/chatFragment"
         android:name="com.anp56.bugistory.ChatFragment"
         android:label="fragment_chat"
         tools:layout="@layout/fragment_chat" />
