--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -126,7 +126,7 @@
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="40dp"
