--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="@id/password_edit_text"
         app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>
 
-    <Button
+    <android.widget.Button
         android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="40dp"
