--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -185,7 +185,7 @@
         app:layout_constraintTop_toBottomOf="@id/id_edit_text"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="40dp"
