--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -127,7 +127,7 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <android.widget.Button
-        android:id="@+id/login_button"
+        android:id="@+id/loginButton"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="100dp"
