--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,21 +49,23 @@
         android:fontFamily="@font/rubik_bold"
         app:layout_constraintStart_toStartOf="@id/id_edit_text"
         app:layout_constraintBottom_toTopOf="@id/id_edit_text"/>
+
     <EditText
         android:id="@+id/id_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:padding="10dp"
         android:layout_marginTop="80dp"
-        android:hint="example@email.com"
-        android:textColor="@color/black"
-        android:inputType="textEmailAddress"
+        android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
-        android:background="@drawable/round_white_rect"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        android:hint="example@email.com"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/title"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,21 +77,23 @@
         android:fontFamily="@font/rubik_bold"
         app:layout_constraintStart_toStartOf="@id/password_edit_text"
         app:layout_constraintBottom_toTopOf="@id/password_edit_text"/>
+
     <EditText
         android:id="@+id/password_edit_text"
-        android:layout_marginTop="40dp"
-        android:padding="10dp"
         android:layout_width="300dp"
         android:layout_height="40dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/round_white_rect"
-        android:fontFamily="@font/rubik_regular"
-        android:textColor="@color/black"
-        android:hint="password"
         android:elevation="3dp"
+        android:fontFamily="@font/rubik_regular"
+        android:hint="password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/id_edit_text"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/id_edit_text"
+        tools:ignore="TouchTargetSizeCheck" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -102,19 +106,19 @@
         app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>
 
     <android.widget.Button
-        android:id="@+id/login_button"
+        android:id="@+id/loginButton"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:text="로그인"
-        android:textSize="16dp"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/rubik_bold"
-        android:textColor="#A6A4E8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/round_white_rect"
+        android:fontFamily="@font/rubik_bold"
+        android:text="로그인"
+        android:textColor="#A6A4E8"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_edit_text"
-        />
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/account_question"
@@ -124,8 +128,8 @@
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
         android:fontFamily="@font/rubik_bold"
-        app:layout_constraintStart_toStartOf="@id/login_button"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
+        app:layout_constraintStart_toStartOf="@id/loginButton"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintEnd_toStartOf="@id/create_account"/>
     <TextView
         android:id="@+id/create_account"
@@ -136,7 +140,7 @@
         android:textColor="#535383"
         android:fontFamily="@font/rubik_bold"
         app:layout_constraintStart_toEndOf="@id/account_question"
-        app:layout_constraintEnd_toEndOf="@id/login_button"
-        app:layout_constraintTop_toBottomOf="@id/login_button" />
+        app:layout_constraintEnd_toEndOf="@id/loginButton"
+        app:layout_constraintTop_toBottomOf="@id/loginButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
