--- a/app/src/main/res/layout/findpw_dialog.xml
+++ b/app/src/main/res/layout/findpw_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="전화번호를 변경해주세요." />
+        android:hint="이메일을 입력" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,10 +31,10 @@
             android:id="@+id/finish_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/rubik_bold"
-            android:textColor="#A6A4E8"
             android:background="@drawable/round_white_rect"
-            android:text="완료"/>
+            android:fontFamily="@font/rubik_bold"
+            android:text="찾기"
+            android:textColor="#A6A4E8" />
 
     </LinearLayout>
 
