--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -15,66 +15,6 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <EditText
-        android:id="@+id/phone_edit_text"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="288dp"
-        android:background="@drawable/round_white_rect"
-        android:elevation="3dp"
-        android:fontFamily="@font/rubik_regular"
-        android:hint="000-0000-0000"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <TextView
-        android:id="@+id/Phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/rubik_bold"
-        android:text="전화번호"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/phone_edit_text"
-        app:layout_constraintStart_toStartOf="@+id/phone_edit_text" />
-
-    <EditText
-        android:id="@+id/name_edit_text2"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="204dp"
-        android:background="@drawable/round_white_rect"
-        android:elevation="3dp"
-        android:fontFamily="@font/rubik_regular"
-        android:hint="성명"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <TextView
-        android:id="@+id/Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/rubik_bold"
-        android:text="이름"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/name_edit_text2"
-        app:layout_constraintStart_toStartOf="@+id/name_edit_text2" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_01"
         android:layout_width="wrap_content"
@@ -112,7 +52,7 @@
         android:id="@+id/id_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="224dp"
         android:background="@drawable/round_white_rect"
         android:elevation="3dp"
         android:fontFamily="@font/rubik_regular"
@@ -130,17 +70,16 @@
         android:id="@+id/loginButton"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="96dp"
         android:background="@drawable/round_white_rect"
         android:fontFamily="@font/rubik_bold"
-        android:text="비번찾기"
+        android:text="비번재설정"
         android:textColor="#A6A4E8"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text"
         tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
