--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,16 +94,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/id_edit_text"
         tools:ignore="TouchTargetSizeCheck" />
+
     <TextView
+        android:id="@+id/findpw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호 찾기"
-        android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/rubik_bold"
+        android:text="비밀번호 찾기"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@id/password_edit_text"
-        app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>
+        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />
 
     <android.widget.Button
         android:id="@+id/loginButton"
