--- a/app/src/main/res/layout/item_post_recycler_view.xml
+++ b/app/src/main/res/layout/item_post_recycler_view.xml
@@ -89,7 +89,7 @@
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:src="@mipmap/like_heart"/>
+                android:src="@drawable/ic_baseline_thumb_up_24" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
