--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -57,18 +57,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/default_dark_ui_color"
         >
+
         <EditText
+            android:id="@+id/chat_editText"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@drawable/round_white_rect"
             android:layout_margin="10dp"
-            android:padding="10dp"
+            android:background="@drawable/round_white_rect"
             android:hint="채팅을 작성해 주세요."
+            android:padding="10dp"
             android:textColor="@color/default_dark_ui_color"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/send_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <Button
             android:id="@+id/send_button"
             android:layout_width="wrap_content"
