--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,9 +4,9 @@
     <item android:id="@+id/mainFragment"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="home" />
-    <item android:id="@+id/chatFragment"
+    <!--<item android:id="@+id/chatFragment"
         android:icon="@drawable/ic_baseline_chat_24"
-        android:title="chat" />
+        android:title="chat" />-->
     <item android:id="@+id/myFriendFragment"
         android:icon="@drawable/ic_baseline_people_alt_24"
         android:title="MyFriend" />
