--- a/app/bugiwear/src/main/res/layout/activity_setting.xml
+++ b/app/bugiwear/src/main/res/layout/activity_setting.xml
@@ -15,6 +15,26 @@
         android:layout_height="match_parent"
         app:layout_boxedEdges="all">
         <Button
+            android:id="@+id/profile_button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/round_white_rect"
+            android:fontFamily="@font/rubik_bold"
+            android:textColor="@color/default_dark_ui_color"
+            android:text="Profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/friend_list_button"/>
+        <Button
+            android:id="@+id/friend_list_button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/round_white_rect"
+            android:fontFamily="@font/rubik_bold"
+            android:textColor="@color/default_dark_ui_color"
+            android:text="My Friends"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <Button
             android:id="@+id/logout_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -22,7 +42,7 @@
             android:fontFamily="@font/rubik_bold"
             android:textColor="#FF0000"
             android:text="Logout"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/friend_list_button"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.wear.widget.BoxInsetLayout>
